--- a/EDApt1Exercises.ipynb
+++ b/EDApt1Exercises.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "c18c6c3a-909e-4be2-bec6-fffe39a15f18",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "id": "f7c86c6b",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "43c9f9a2",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2224/2235884880.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m40\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6836/2235884880.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m40\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
      ]
     }
@@ -104,24 +104,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "e31b74b5-2f8e-4126-bf65-be577a3e5b06",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "brand       Ford\n",
+       "model    Mustang\n",
+       "year        1964\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create the s1 series from the list: [10,20,30,40,50]\n",
-    "\n",
+    "s1 = pd.Series([10,20,30,40,50])\n",
     "# additional practice\n",
     "# create a series called s_tuple from the tuple: (\"apple\", \"banana\", \"cherry\")\n",
-    "\n",
-    "# create a series called s_dictionary from the dictionary: {\"brand\": \"Ford\", \"model\": \"Mustang\", \"year\": 1964}\n"
+    "s_tuple = pd.Series([\"apple\", \"banana\", \"cherry\"])\n",
+    "s_tuple\n",
+    "# create a series called s_dictionary from the dictionary: {\"brand\": \"Ford\", \"model\": \"Mustang\", \"year\": 1964}\n",
+    "s_dictionary = pd.Series({\"brand\": \"Ford\", \"model\": \"Mustang\", \"year\": 1964})\n",
+    "s_dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "76d730b9-fd65-4278-af53-22c1674005a9",
    "metadata": {
     "tags": []
@@ -129,23 +146,23 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_2224/3900534587.py, line 5)",
+     "evalue": "invalid syntax (Temp/ipykernel_6836/3187983355.py, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Dayra\\AppData\\Local\\Temp/ipykernel_2224/3900534587.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    print(\"The s_tuple series values are:\", #s_tuple values#)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Dayra\\AppData\\Local\\Temp/ipykernel_6836/3187983355.py\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    print(\"The s_dictionary series values are:\", \"brand\":\"Ford\", \"model\": \"Mustang\", \"year\": 1964)\u001b[0m\n\u001b[1;37m                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# fill in the blank with the series values and index values\n",
-    "print(\"The s1 series values are:\", #s1 values#)\n",
-    "print(\"The s1 index values are:\", #s1 index values#)\n",
+    "print(\"The s1 series values are:\", 10,20,30,40,50)\n",
+    "print(\"The s1 index values are:\", 0,1,2,3,4)\n",
     "print(\"\\n\")\n",
-    "print(\"The s_tuple series values are:\", #s_tuple values#)\n",
-    "print(\"The s_tuple index values are:\", #s_tuple index values#)\n",
+    "print(\"The s_tuple series values are:\",\"apple\", \"banana\", \"cherry\" )\n",
+    "print(\"The s_tuple index values are:\", 0,1,2)\n",
     "print(\"\\n\")\n",
-    "print(\"The s_dictionary series values are:\", #s_dictionary values#)\n",
-    "print(\"The s_dictionary index values are:\", #s_dictionary index values#)"
+    "print(\"The s_dictionary series values are:\", \"brand\":\"Ford\", \"model\": \"Mustang\", \"year\": 1964)\n",
+    "print(\"The s_dictionary index values are:\",0,1,2 )"
    ]
   },
   {
@@ -160,22 +177,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f7794bcc-c9f0-4c21-80f5-c71258532c13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "English    80\n",
+       "Science    93\n",
+       "Social     78\n",
+       "Tamil      85\n",
+       "Maths      97\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create the s2 series from the list [80,93,78,85,97] and with labeled indexes ['English','Science','Social','Tamil','Maths']\n"
+    "# create the s2 series from the list [80,93,78,85,97] and with labeled indexes ['English','Science','Social','Tamil','Maths']\n",
+    "s2 = pd.Series([80,93,78,85,97], index=['English','Science','Social','Tamil','Maths'])\n",
+    "s2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5674059a-a773-4bc0-b6f1-94ff3d5e2bf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Marks obtained by the students are\n",
+      " English    80\n",
+      "Science    93\n",
+      "Social     78\n",
+      "Tamil      85\n",
+      "Maths      97\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# print the s2 series"
+    "# print the s2 series\n",
+    "print(\"The Marks obtained by the students are\\n\", s2)"
    ]
   },
   {
@@ -188,24 +238,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "36a58fa6-c808-4ca4-8209-c53b97d298bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "English    80\n",
+      "Science    93\n",
+      "Social     78\n",
+      "Tamil      85\n",
+      "Maths      97\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# assign the s2 series name to be \"Student Marks\"\n",
-    "\n",
-    "# assign the s2 index name to be \"Subject\"\n"
+    "s2.rename(\"Student Marks\")\n",
+    "s2\n",
+    "# assign the s2 index name to be \"Subject\"\n",
+    "#s2 = pd.Series([80,93,78,85,97], Subject = ['English','Science','Social','Tamil','Maths'])\n",
+    "s2 = index.rename(\"Subject\")\n",
+    "print(\"the new index for s2 is Subject. See below:\\n\", s2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0ead4e61-9a2d-4efc-bdb6-aaaad033654f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "English    80\n",
+       "Science    93\n",
+       "Social     78\n",
+       "Tamil      85\n",
+       "Maths      97\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print the s2 series again to see the newly assigned name and index name\n"
+    "# print the s2 series again to see the newly assigned name and index name\n",
+    "s2"
    ]
   },
   {
@@ -223,34 +307,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "fa73dcf8-8afb-4a9a-a11f-2549a078137d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# return the first element in the s2 series\n"
+    "# return the first element in the s2 series\n",
+    "s2[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "325c7f72-35e7-40cf-ab84-756ad241ba53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Science    93\n",
+       "Social     78\n",
+       "Tamil      85\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slicing using default integer index\n",
-    "# return the elements starting at position one and ending with the element at index 3\n"
+    "# return the elements starting at position one and ending with the element at index 3\n",
+    "s2[1:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "47f1247d-bbbb-482b-b420-1e26c4acd7a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slicing using string index\n",
-    "# return the element associated with the index 'Tamil'\n"
+    "# return the element associated with the index 'Tamil'\n",
+    "s2['Tamil']"
    ]
   },
   {
@@ -271,43 +394,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "e518a820-ab1f-41c1-8740-7df589d2e145",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary of fruit names and their prices. Use the values from the article\n"
+    "# create a dictionary of fruit names and their prices. Use the values from the article\n",
+    "dict_fruits = { 'Orange':80,\n",
+    "          'Apples':210,\n",
+    "          'Bananas':50,\n",
+    "         'Grapes':90,\n",
+    "         'Watermelon':70}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "f55a91ad-4954-44a7-ab9e-0dc9f049866f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Orange         80\n",
+       "Apples        210\n",
+       "Bananas        50\n",
+       "Grapes         90\n",
+       "Watermelon     70\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Lets convert this dictionary into a series\n",
-    "# use the pandas method .Series() \n"
+    "# use the pandas method .Series() \n",
+    "fruits = pd.Series(dict_fruits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "e7ffad90-5e49-46bb-93ba-d6b66682f8b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Orange         80\n",
+       "Apples        210\n",
+       "Bananas        50\n",
+       "Grapes         90\n",
+       "Watermelon     70\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print the series\n"
+    "# print the series\n",
+    "fruits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "a4477e73-b2f8-472c-a8ce-d25455fceda0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Slice the series and retrieve price of grapes\n"
+    "# Slice the series and retrieve price of grapes\n",
+    "fruits['Grapes']"
    ]
   },
   {
@@ -324,22 +498,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "7b8c6007-fb21-4609-b98f-5e8a7359ba42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dataframe from the s2 series\n"
+    "# create a dataframe from the s2 series\n",
+    "df_marks = pd.DataFrame(s2, columns=['Student1'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "3440fb09-d503-4471-8d68-5fb91c77b0c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataframe created from series isn          Student1\n",
+      "English        80\n",
+      "Science        93\n",
+      "Social         78\n",
+      "Tamil          85\n",
+      "Maths          97\n"
+     ]
+    }
+   ],
    "source": [
-    "# print the dataframe\n"
+    "# print the dataframe\n",
+    "print(\"The dataframe created from series isn\",df_marks)"
    ]
   },
   {
@@ -358,33 +547,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "4ce55704-083e-480d-9acd-44304b341f31",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create height series using [5.3, 6.2,5.8,5.0,5.5] for values, ['Person 1','Person 2','Person 3','Person 4','Person 5'] for indexes\n",
+    "height_series = pd.Series([5.3, 6.2,5.8,5.0,5.5], index=['Person 1','Person 2','Person 3','Person 4','Person 5'])\n",
     "\n",
-    "\n",
-    "# Create weight series (in kgs) using [65,89,75,60,59] for values and the same indexes as height\n"
+    "# Create weight series (in kgs) using [] for values and the same indexes as height\n",
+    "weight_series = pd.Series([65,89,75,60,59], index=['Person 1','Person 2','Person 3','Person 4','Person 5'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "1bd7b205-0443-454e-85d5-bcd9e5478aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The df_person table details are:n           height  weight\n",
+      "Person 1     5.3      65\n",
+      "Person 2     6.2      89\n",
+      "Person 3     5.8      75\n",
+      "Person 4     5.0      60\n",
+      "Person 5     5.5      59\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dataframe from the height and weight series above\n",
+    "df_person = pd.DataFrame({'height':height_series ,'weight':weight_series})\n",
+    "# print the dataframe\n",
+    "print(\"The df_person table details are:n\", df_person)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd7b205-0443-454e-85d5-bcd9e5478aea",
+   "id": "e444f010",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Create a dataframe from the height and weight series above\n",
-    "\n",
-    "# print the dataframe\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
